Bug 309213 - Favicons are not displayed correctly in pinned or detached tabs
Summary: Favicons are not displayed correctly in pinned or detached tabs
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: latest git snapshot
Platform: Chakra Linux
: NOR normal
Target Milestone: ---
Assignee: Andrea Diamantini
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-29 20:03 UTC by Michael Gapczynski
Modified: 2013-04-25 08:18 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Gapczynski 2012-10-29 20:03:08 UTC
The favicons in some tabs are not rendered or are chopped in half after pinning or detaching a tab. See screenshot: http://blog.gapinthecloud.com/wp-content/uploads/2012/10/rekonq-bug.png

Reproducible: Sometimes

Steps to Reproduce:
1. Go to a website
2. Pin or detach tab
Actual Results:  
Favicon not rendered correctly
Comment 1 EP 2012-12-29 19:28:10 UTC
confirm
albert@PC:~> zypper if rekonq
Loading repository data...
Reading installed packages...


Information for package rekonq:

Repository: KDE:Distro:Factory
Name: rekonq
Version: 2.0-36.1
Arch: i586
Vendor: obs://build.opensuse.org/KDE
Installed: Yes
Status: up-to-date
Comment 2 Andrea Diamantini 2013-01-20 15:56:19 UTC
I'm aware of this, but I could not find a proper fix for this. This is something qt related anyway, or at least, it is related to the way we use Qt classes to show tab favicon and rounding loader.
Comment 3 Jazzy Vidalia 2013-02-22 08:12:58 UTC
I have a bug that is similar to this and may be related. Favicons for some sites (oddly, the bug especally ocurrs on Facebook especially) do not load with the proper icon. Instead it seems like it is loading a random favicon from some other site I have visited.

It happens no matter if I close the tab or close the browser and re-open. I've also tried clearing the cache which doesn't work either.
Comment 4 Andrea Diamantini 2013-04-25 08:18:04 UTC
Git commit 69b8ab5d5e3fe891ea7654921276d47dca32ca8e by Andrea Diamantini.
Committed on 25/04/2013 at 10:07.
Pushed by adjam into branch 'master'.

Finally fix the pinning icons cluttering

(or at least, well workarounding...)

M  +4    -0    src/tabwindow/tabbar.cpp

http://commits.kde.org/rekonq/69b8ab5d5e3fe891ea7654921276d47dca32ca8e