Finally fix the pinning icons cluttering

(or at least, well workarounding...)

BUG: 309213